--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class=" col-6 ">
                         <h1 class="display-4 text-center texto-shadow"><strong>FONDO DE EMPLEADOS DEL DEPARTAMENTO DEL HUILA</strong></h1>
                         <h5 class="text-center ">SISTEMA DE GESTION DE CALIDAD</h5>
-                        <h5 class="text-center ">INFORMACION DOCUMENTADA</h5>
+                        <h5 class="text-center ">INFORMACION </h5>
                       </div>  
                 </div>
             </div>
